--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,7 +6,7 @@
   z-index: 2;
 }
 
-@media screen and (min-width: 320px) and (max-width: 600px) {
+@media screen and (max-width: 640px) {
   .cover__title {
     font-size: 32px;
     line-height: 1.09;
