--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,15 +7,15 @@
   line-height: 1.14;
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 768px) {
   .footer__copyright {
-    margin-top: 48px;
-    margin-left: 16px;
+    margin-right: 24px;
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (max-width: 640px) {
   .footer__copyright {
-    margin-right: 24px;
+    margin-top: 48px;
+    margin-left: 16px;
   }
 }
