--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -17,13 +17,15 @@
 }
 
 .footer__link:hover {
-  opacity: 0.6;
+  opacity: 0.8;
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 640px) {
   .footer__link {
     font-size: 24px;
     line-height: 1.5;
+    display: block;
+    margin-top: 32px;
   }
 
   .footer__link:first-child {
