--- a/blocks/footer/__menu-list/footer__menu-list.css
+++ b/blocks/footer/__menu-list/footer__menu-list.css
@@ -5,7 +5,7 @@
   margin: 0;
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 640px) {
   .footer__menu-list {
     flex-direction: column;
   }
