--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,22 +1,17 @@
 .lead__image {
   max-width: 100%;
   height: auto;
+  margin-top: 64px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .lead__image {
-    margin-top: 40px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .lead__image {
     margin-top: 56px;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (max-width: 640px) {
   .lead__image {
-    margin-top: 64px;
+    margin-top: 40px;
   }
 }
